--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
@@ -1,3 +1,15 @@
+<div class="max-w-[100rem] py-2 lg:py-0 mx-auto flex gap-2">
+  <mat-form-field class="w-[20rem]">
+    <mat-label>Buscar producto</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ingresar descripción"
+      #input
+    />
+  </mat-form-field>
+</div>
+
 <div class="container-datos-page">
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- =================================================================================== -->
