--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-report-inventario/design-report-inventario.component.html
@@ -291,7 +291,7 @@
                       <div
                         class="opcion flex-1 boder-target rounded-lg p-2 gap-2 active:bg-white flex justify-center items-center text-center transition-transform transform cursor-pointer"
                         [class.selected]="selectedOption === 'excel'"
-                        (click)="selectOptionEXCEL('excel')"
+                        (click)="selectOptionEXCELAjuste('excel')"
                       >
                         <img
                           src="../../../../../../../assets/svg/icon_excel.svg"
@@ -307,7 +307,7 @@
                       <div
                         class="opcion flex-1 boder-target rounded-lg p-2 gap-2 active:bg-white flex justify-center items-center text-center transition-transform transform cursor-pointer"
                         [class.selected]="selectedOption === 'pdf'"
-                        (click)="selectOptionPDF('pdf')"
+                        (click)="selectOptionPDFAjustar('pdf')"
                       >
                         <img
                           class="icon-pdf"
