06_03_2025 BUSCAR EN AJUSTADOS ALINEADO

--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-[100rem] py-2 lg:py-0 mx-auto flex gap-2">
+<div class="max-w-[100rem] py-2 lg:py-0  flex gap-2">
   <mat-form-field class="w-[20rem]">
     <mat-label>Buscar producto</mat-label>
     <input
