--- a/src/app/Ui/Modules/AJUSTES-INVENTARIO/components/tabla-ajustes-inventario-datos/tabla-ajustes-inventario-datos.component.html
+++ b/src/app/Ui/Modules/AJUSTES-INVENTARIO/components/tabla-ajustes-inventario-datos/tabla-ajustes-inventario-datos.component.html
@@ -15,21 +15,35 @@
     />
   </mat-form-field>
 
+  <div class="flex gap-6">
+    <button
+    mat-raised-button
+    color="primary"
+    (click)="guardarAjustes()"
+    class="px-2 h-12 rounded-lg bg-blue-600 text-white font-semibold shadow-md transition-all duration-300 ease-in-out transform hover:bg-blue-700 hover:shadow-lg active:scale-80 flex items-center gap-2"
+  >
+    <mat-icon>save</mat-icon>
+    Guardar Ajustes
+  </button>
+
   <button
   mat-raised-button
   color="primary"
+  disabled
   (click)="guardarAjustes()"
-  class="px-2 h-12 rounded-lg bg-blue-600 text-white font-semibold shadow-md transition-all duration-300 ease-in-out transform hover:bg-blue-700 hover:shadow-lg active:scale-80 flex items-center gap-2"
->
+  class="px-2 h-12 rounded-lg bg-orange-600 text-white font-semibold shadow-md transition-all duration-300 ease-in-out transform hover:bg-orange-700 hover:shadow-lg active:scale-80 flex items-center gap-2 cursor-not-allowed"
+  >
   <mat-icon>save</mat-icon>
-  Guardar Ajustes
-</button>
+  Cerrar Ajuste
+  </button>
+  </div>
+
 
 </div>
 
 <section>
   <div
-    class="bg-white border border-gray-200 rounded-xl  max-w-[100vw] py-6 lg:py-4 mx-auto h-auto overflow-auto max-h-[72vh]"
+    class="bg-white border border-gray-200 rounded-xl  max-w-[100rem] py-6 lg:py-4 mx-auto h-auto overflow-auto max-h-[72vh]"
   >
   <table mat-table [dataSource]="dataSource" matSort>
     <!-- =================================================================================== -->
@@ -41,7 +55,7 @@
       </th>
       <td mat-cell *matCellDef="let row">
         <button class="px-6 py-3 flex gap-2 align-center">
-          <span class="text-sm text-gray-600">{{
+          <span class="text-sm text-gray-600 text-left">{{
             row.codigoproducto
           }}</span>
         </button>
@@ -55,7 +69,7 @@
       </th>
       <td mat-cell *matCellDef="let row">
         <button class="px-6 py-3 flex gap-2 align-center">
-          <span class="text-sm text-gray-600">{{
+          <span class="text-sm text-gray-600 text-left">{{
             row.codigobarra
           }}</span>
         </button>
@@ -68,8 +82,8 @@
         Descripción
       </th>
       <td mat-cell *matCellDef="let row">
-        <button class="px-6 py-3 flex gap-2 align-center">
-          <span class="text-sm text-gray-600">{{
+        <button class="px-6 py-3 flex gap-2 align-left">
+          <span class="text-sm text-gray-600 text-left">{{
             row.descripcionProducto
           }}</span>
         </button>
